comment print statement

--- a/music-quiz/index.html
+++ b/music-quiz/index.html
@@ -307,7 +307,7 @@
       } else if (event.data === -1) {
         setVideoUnstartedState();
       }
-      printEventData(event.data);
+      //printEventData(event.data);
     }
 
     function onError(event) {
