fix audio fade out, fix audio spike when using tX params, and clean up UI

--- a/music-quiz/index.html
+++ b/music-quiz/index.html
@@ -37,9 +37,9 @@
   <input type="checkbox" id="myCheck" onclick="configurePlayerShuffle()">
   -->
   <br><br>
-  <label>The following will remove any timer <b>and reveal the answer</b> until the next video loads:</label>
+  <label>This will remove any timer (and reveal the answer) until the next video loads:</label>
   <br>
-  <input type="button" class="button" id="endQuizForVidButton" value="End quiz for current video"
+  <input type="button" class="button" id="endQuizForVidButton" value="Pause quiz for current video"
     onclick="endQuizForVideo()">
 
   <h1>Settings</h1>
