rename images folder and clean up README

--- a/music-quiz/index.html
+++ b/music-quiz/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <img id='fooni' src="img/friday-night.webp">
+  <img id='fooni' src="images/friday-night.webp">
   <div class="playerParent">
     <div id="player"></div>
   </div>
