small volume fix

--- a/music-quiz/index.html
+++ b/music-quiz/index.html
@@ -39,7 +39,7 @@
   <input type="checkbox" id="myCheck" onclick="configurePlayerShuffle()">
   -->
   <br><br>
-  <label>This will remove any timer (and reveal the answer) until the next video loads:</label>
+  <label>This button will remove any timer (and reveal the answer) until the next video loads:</label>
   <br>
   <input type="button" class="button" id="endQuizForVidButton" value="Pause quiz for current video"
     onclick="endQuizForVideo()">
