add mute functionality

--- a/music-quiz/index.html
+++ b/music-quiz/index.html
@@ -32,7 +32,7 @@
             <input type="button" class="button vid-control-button" id="playVideoButton" onclick="playVideo()">
             <input type="button" class="button vid-control-button" id="pauseVideoButton" onclick="pauseVideo()">
             <input type="button" class="button vid-control-button" id="nextVideoButton" onclick="nextVideo()">
-            <img id="vol-icon" class="icon" src="images/icons/volume-full-solid-36.png">
+            <img id="vol-icon" class="icon" src="images/icons/volume-full-solid-36.png" onclick="toggleMute()">
             <input type="range" min="1" max="100" value="50" class="slider" id="ytVolume">
           </section>
           <section class="middle-video-controls">
