--- a/music-quiz/index.html
+++ b/music-quiz/index.html
@@ -130,14 +130,14 @@
         <p>
           For now, you will need to keep the website visible somewhere on your screen so your browser doesn't lose focus.
           <br><br>
-          This app uses setInterval and setTimeout in a lot of its functionality, and both of those have degreaded
+          This app uses setInterval and setTimeout in a lot of its functionality, and both of those have degraded
           performance on tabs that lose focus (i.e. tabs that are tabbed out, minimized, etc.)
           <br><br>
-          This was only tested on Firefox and Chromium, so other browsers may have unexpected issues.
+          This was only tested on Firefox and Chromium, so other browsers may have even more unexpected issues. ( • ᴖ • )
         </p>
         <h2>Video won't load</h2>
         <p>
-          YouTube or the user has disabled embedded play that vid, or the video got marked as private/deleted.
+          YouTube or the user has disabled embedded play, or the video got marked as private/deleted.
           <br><br>
           Event codes: <a href="https://developers.google.com/youtube/iframe_api_reference#Events">https://developers.google.com/youtube/iframe_api_reference#Events</a>
           <br><br>
