--- a/music-quiz/index.html
+++ b/music-quiz/index.html
@@ -211,6 +211,7 @@
 
   <script>
     initializeHeaderEmote();
+    initializeStyles();
 
     var tag = document.createElement('script');
     tag.src = 'https://www.youtube.com/iframe_api';
