--- a/music-quiz/index.html
+++ b/music-quiz/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <title>Music Quiz Thingy</title>
   <link rel="stylesheet" href="styles/flex-base.css">
   <link rel="stylesheet" href="styles/styles.css">
   <script src="scripts/fooni.js"></script>
